--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ figure {
 
 figure img {
   width: 90%;
-  height: 35vh;
+  height: 150px;
   border: 5px solid lightgray;
   border-radius: 2%;
   margin: auto;
@@ -124,58 +124,70 @@ figure img {
 /* Media Queries de la sección de artículo */
 
 @media screen and (min-width: 320px) and (max-width: 419px) {
+
   .article {
     padding: 25px;
   }
+
   .article h2 {
     margin-top: 20px;
   }
+
   .article p {
     font-size: 12px;
   }
+
   figure img {
-    width: 70%;
-    height: 30vh;
+    width: 80%;
+    height: 200px;
   }
 }
 
 @media screen and (min-width:420px) and (max-width:719px) {
+
   .article {
     padding: 30px;
     text-align: left;
   }
+
   .article h2 {
     text-align: center;
     margin-bottom: 15px;
     font-size: 22px;
   }
+
   .article p {
     text-align: left;
     font-size: 16px;
   }
+
   figure img {
-    width: 65%;
-    height: 40vh;
+    width: 80%;
+    height: 250px;
   }
 }
 
 @media screen and (min-width:720px) {
+
   .article {
     padding: 30px;
     text-align: left;
   }
+
   .article h2 {
     text-align: center;
     margin-top: 35px;
     margin-bottom: 15px;
     font-size: 32px;
   }
+
   .article p {
     font-size: 20px;
     margin-top: 15px;
   }
+
   figure img {
-    width: 90%;
-    height: 70vh;
+    width: 600px;
+    height: 400px;
   }
 }
